scripts/nullaway/wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8.txt
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/main/Simulation.java:224: error: [NullAway] assigning @Nullable expression to @NonNull field
            this.cashiers = cashiers;
                          ^
    (see http://t.uber.com/nullaway )
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/queue/UniformServer.java:55: error: [NullAway] dereferenced expression e is @Nullable
                e.execute();
                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/queue/UniformServer.java:57: error: [NullAway] dereferenced expression getQueueSystem() is @Nullable
                if ((next = getQueueSystem().dequeue()) != null) {
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/queue/CustomServer.java:33: error: [NullAway] dereferenced expression e is @Nullable
                e.execute();
                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/queue/CustomServer.java:35: error: [NullAway] dereferenced expression getQueueSystem() is @Nullable
                if ((next = getQueueSystem().dequeue()) != null) {
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:141: error: [NullAway] dereferenced expression temp is @Nullable
        QueueInfo info = temp.get(temp.size() - 1);
                             ^
    (see http://t.uber.com/nullaway )
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:141: error: [NullAway] dereferenced expression temp is @Nullable
        QueueInfo info = temp.get(temp.size() - 1);
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:185: error: [NullAway] dereferenced expression list is @Nullable
        Iterator<QueueInfo> it = list.iterator();
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:212: error: [NullAway] dereferenced expression list is @Nullable
        Iterator<QueueInfo> it = list.iterator();
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:272: error: [NullAway] dereferenced expression d is @Nullable
        d.to = SimulationClk.clock;
         ^
    (see http://t.uber.com/nullaway )
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:274: error: [NullAway] dereferenced expression list is @Nullable
        list.add(d);
            ^
    (see http://t.uber.com/nullaway )
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:289: error: [NullAway] dereferenced expression list is @Nullable
        Iterator<Delay> it = list.iterator();
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:312: error: [NullAway] dereferenced expression list is @Nullable
        Iterator<Delay> it = list.iterator();
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:325: error: [NullAway] unboxing of a @Nullable value
        return maxNumInQueue.get(qType);
                                ^
    (see http://t.uber.com/nullaway )
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:335: error: [NullAway] unboxing of a @Nullable value
            sum += custDelay.get(next);
                                ^
    (see http://t.uber.com/nullaway )
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:349: error: [NullAway] unboxing of a @Nullable value
                sum += custDelay.get(next);
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:363: error: [NullAway] unboxing of a @Nullable value
                int delay = custDelay.get(next);
                                         ^
    (see http://t.uber.com/nullaway )
17 errors
